dataset1235/2025-2/1153765216/users/1937138466/executions/2814675586_997093868.log
== SUBMISSION (2025-08-26 19:07:10)
-- CODE: 
    a = int(float(input("Informe um numero: ")))
b = int(float(input("Informe um numero: ")))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:54)
-- CODE: 
    a = int(float(input("Informe um numero: "))
b = int(float(input("Informe um numero: "))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:52)
-- CODE: 
    a = int(float(input("Informe um numero: "))
b = int(float(input("Informe um numero: "))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:07:16)
-- CODE: 
a = int(float(input("Informe um numero: ")))
b = int(float(input("Informe um numero: ")))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Informe um numero: Informe um numero: 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Informe um numero: Informe um numero: 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Informe um numero: Informe um numero: 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Informe um numero: Informe um numero: 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Informe um numero: Informe um numero: 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Informe um numero: Informe um numero: 108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:54)
-- CODE: 
    a = int(float(input("Informe um numero: "))
b = int(float(input("Informe um numero: "))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: "))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:07:09)
-- CODE: 
    a = int(float(input("Informe um numero: ")))
b = int(float(input("Informe um numero: ")))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:07:09)
-- CODE: 
    a = int(float(input("Informe um numero: ")))
b = int(float(input("Informe um numero: ")))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int(float(input("Informe um numero: ")))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
